Fix dynamicTable
